--- a/admin/product.html
+++ b/admin/product.html
@@ -60,6 +60,9 @@
 						'<div class="input-group operation-button">' +
 							'<a href="#"><i class="fa fa-bars text-warning">&nbsp;</i> Manage Product</a>'+
 						'</div>' +
+						'<div class="input-group operation-button">' +
+							'<a href="color.html"><i class="fa fa-bars text-warning">&nbsp;</i> Manage Color</a>'+
+						'</div>' +
 			        	'<div class="input-group pull-right">' +
 			        		'<input type="text" class="form-control" placeholder="Search">' +
 				        	'<span class="input-group-btn">' +
