--- a/admin/videos.html
+++ b/admin/videos.html
@@ -48,7 +48,7 @@
 					'<div class="operation-group">'+
 						'<form class="form-inline">' +
 							'<div class="input-group operation-button">' +
-								'<a href="newVideo.html"><i class="fa fa-plus-circle text-warning">&nbsp;</i> Add Video</a>'+
+								'<a href="formVideo.html"><i class="fa fa-plus-circle text-warning">&nbsp;</i> Add Video</a>'+
 							'</div>' +
 							'<div class="input-group operation-button">' +
 								'<a href="#"><i class="fa fa-minus-circle text-warning">&nbsp;</i> Delete Video</a>'+
