--- a/admin/color.html
+++ b/admin/color.html
@@ -32,28 +32,28 @@
 		<!-- page script -->
 		<script type="text/javascript">
 			$(function(){
-				loadData();
+				customer();
 			});
-			function loadData(){
+			function customer(){
 				var html = '';
-				var desc = "...(Melissa’s) imagination manifests in an inspirational visual.";
-				desc = desc.substring(0, 100) + '...';
-				var data = [
-					{ chatterId: "1", title: 'ELLE', description: desc, date: "25TH FEBRUARY 2014", picture: 'print-chatter-oct2011-1.jpg', publishedTime: '2017/10/21 12:00:00', publishedBy: 'admin' },
-				]
+
+				var data = 
+				[
+					{ idData: '1', name: "Blue Arc" },
+				];
 
 				html = html +
 				'<div class="header-option">' +
 					'<div class="operation-group">'+
 						'<form class="form-inline">' +
 							'<div class="input-group operation-button">' +
-								'<a href="formChatter.html"><i class="fa fa-plus-circle text-warning">&nbsp;</i> Add Chatter</a>'+
+								'<a href="newCustomer.html"><i class="fa fa-plus-circle text-warning">&nbsp;</i> Add Color</a>'+
 							'</div>' +
 							'<div class="input-group operation-button">' +
-								'<a href="#"><i class="fa fa-minus-circle text-warning">&nbsp;</i> Delete Chatter</a>'+
+								'<a href="#"><i class="fa fa-minus-circle text-warning">&nbsp;</i> Delete Color</a>'+
 							'</div>' +
 							'<div class="input-group operation-button">' +
-								'<a href="#"><i class="fa fa-bars text-warning">&nbsp;</i> Manage Chatter</a>'+
+								'<a href="#"><i class="fa fa-bars text-warning">&nbsp;</i> Manage Color</a>'+
 							'</div>' +
 				        	'<div class="input-group pull-right search-box">' +
 				        		'<input type="text" class="form-control" placeholder="Search">' +
@@ -66,8 +66,8 @@
 					'</div>' +
 					'<div class="summary-group">'+
 						'<div class="summary-text">'+
-							'<p>Total number of chatters</p>'+
-							'<p class="number">1385</p>'+
+							'<p>Total number of Colors</p>'+
+							'<p class="number">' + data.length + '</p>'+
 						'</div>'+
 						'<div class="alpha">'+
 							'<ul>' +
@@ -107,28 +107,20 @@
 					'<table class="table table-striped table-responsive">'+
 					    '<thead>'+
 					    	'<tr>'+
-						    	'<th width="5%"><input type="checkbox" value="'+loop+'" id="selectRecord' + loop + '" onclick="checkboxToggle(this, \'customerSelect\')" /><label for="selectRecord' + loop + '"></label></th>'+
-						        '<th width="5%" class="text-center"><span class="fa fa-picture-o"></span></th>'+
-						        '<th>Title</th>'+
-						        '<th>Description</th>'+
-						        '<th>Date</th>'+
-						        '<th>By</th>'+
-						        '<th>Time</th>'+
+						    	'<th width="5%"><input type="checkbox" id="selectRecord" onclick="checkboxToggle(this, \'customerSelect\')" /><label for="selectRecord"></label></th>'+
+						    	'<th>Color</th>'+
 					    	'</tr>'+
 					    '</thead>'+
 					    '<tbody>';
-					    	for(var loop =0; loop<data.length; loop++){
-					    		html = html +
-					    		'<tr>'+
-					    			'<td><input type="checkbox" name="customerSelect" value="'+data[loop].chatterId+'" id="selectRecord' + loop + '"><label for="selectRecord' + loop + '"></label></td>'+
-					    			'<td class="text-center"><img class="img-product" src="../assets/PICS/' + data[loop].picture + '"></td>'+
-					    			'<td>'+ data[loop].title +'</td>'+
-					    			'<td>'+ data[loop].description +'</td>'+
-					    			'<td class="syn-nowrap">'+ data[loop].date +'</td>'+
-					    			'<td class="syn-nowrap">'+ data[loop].publishedBy +'</td>'+
-					    			'<td>'+ timeSince(new Date(Date.parse(data[loop].publishedTime))) +'</td>'+
-					    		'</tr>';
-					    	}
+
+		    	for(var loop =0; loop<data.length; loop++){
+		    		html = html +
+		    		'<tr>'+
+		    			'<td><input type="checkbox" name="customerSelect" value="'+data[loop].idData+'" id="selectRecord' + loop + '"><label for="selectRecord' + loop + '"></label></td>'+
+		    			'<td class="syn-nowrap">'+ data[loop].name +'</td>'+
+		    		'</tr>';
+		    	}
+
 				html = html +
 					    '</tbody>'+
 					'</table>'+
