--- a/admin/formHome.html
+++ b/admin/formHome.html
@@ -40,40 +40,24 @@
 
 				html = html +
 				'<div class="input-frame col-md-6">'+
-					'<h3><b>New Customer</b></h3>'+
+					'<h3><b>Home Picture</b></h3>'+
 					'<form>'+
 						'<div class="form-group">'+
-							'<label>Full Name</label>'+
+							'<label>Home Image</label>'+
+						'</div>'+
+						'<div class="form-group text-center">'+
+							'<img class="big-image" src="../assets/default/home.gif">'+
+						'</div>'+
+						'<div class="form-group">'+
+							'<input id="input-id" type="file" class="file form-control" data-preview-file-type="text">'+
+						'</div>' +
+						'<div class="form-group">'+
+							'<label>Title</label>'+
 							'<input type="text" class="form-control">'+
 						'</div>'+
 						'<div class="form-group">'+
-							'<label>Address</label>'+
-							'<textarea class="form-control" id="editor"></textarea>'+
-						'</div>'+
-						'<div class="form-group">'+
-							'<div class="col-md-8 syn-clear">'+
-								'<label>City</label>'+
-								'<input type="text" class="form-control">'+
-							'</div>'+
-							'<div class="col-md-4 syn-clear">'+
-								'<label>Zip Code</label>'+
-								'<input type="text" class="form-control">'+
-							'</div>'+
-							'<div class="clearfix"></div>'+
-						'</div>'+
-						'<div class="form-group">'+
-							'<label>Country</label>'+
-							'<select class="form-control">'+
-								'<option> Indonesia </option>'+
-							'</select>'+
-						'</div>'+
-						'<div class="form-group">'+
-							'<label>Mobile Phone</label>'+
-							'<input type="text" class="form-control">'+
-						'</div>'+
-						'<div class="form-group">'+
-							'<label>Email</label>'+
-							'<input type="email" class="form-control">'+
+							'<label>Description</label>'+
+							'<textarea class="form-control" rows="5"></textarea>'+
 						'</div>'+
 						'<div class="clearfix"></div>'+
 						'<div class="btn-group">'+
