--- a/admin/color.html
+++ b/admin/color.html
@@ -47,7 +47,7 @@
 					'<div class="operation-group">'+
 						'<form class="form-inline">' +
 							'<div class="input-group operation-button">' +
-								'<a href="newCustomer.html"><i class="fa fa-plus-circle text-warning">&nbsp;</i> Add Color</a>'+
+								'<a href="formColor.html"><i class="fa fa-plus-circle text-warning">&nbsp;</i> Add Color</a>'+
 							'</div>' +
 							'<div class="input-group operation-button">' +
 								'<a href="#"><i class="fa fa-minus-circle text-warning">&nbsp;</i> Delete Color</a>'+
