--- a/admin/formBlog.html
+++ b/admin/formBlog.html
@@ -33,9 +33,9 @@
 		<!-- page script -->
 		<script type="text/javascript">
 			$(function(){
-				customer();
+				loadData();
 			});
-			function customer(){
+			function loadData(){
 				var html = '';
 
 				html = html +
