--- a/admin/setting.html
+++ b/admin/setting.html
@@ -53,7 +53,7 @@
 					'<div class="operation-group">'+
 						'<form class="form-inline">' +
 							'<div class="input-group operation-button">' +
-								'<a href="#"><i class="fa fa-plus-circle text-warning">&nbsp;</i> Create User</a>'+
+								'<a href="formUser.html"><i class="fa fa-plus-circle text-warning">&nbsp;</i> Create User</a>'+
 							'</div>' +
 							'<div class="input-group operation-button">' +
 								'<a href="#"><i class="fa fa-minus-circle text-warning">&nbsp;</i> Delete User</a>'+
