--- a/admin/formCustomer.html
+++ b/admin/formCustomer.html
@@ -28,56 +28,66 @@
 		<script type="text/javascript" src="../assets/js/jquery-ui-1.10.0.custom.min.js"></script>
 		<script type="text/javascript" src="../assets/js/bootstrap.min.js"></script>	
 		<script type="text/javascript" src="../assets/js/syncard.js"></script>	
-		<script type="text/javascript" src="../assets/js/nicEdit.js"></script>	
+		<!-- <script type="text/javascript" src="../assets/js/nicEdit.js"></script>	 -->
 
 		<!-- page script -->
 		<script type="text/javascript">
 			$(function(){
-				loadData();
+				customer();
 			});
-			function loadData(){
+			function customer(){
 				var html = '';
 
 				html = html +
-				'<form>'+
-					'<div class="input-frame col-md-6">'+
-						'<h3><b>Chatter</b></h3>'+
+				'<div class="input-frame col-md-6">'+
+					'<h3><b>New Customer</b></h3>'+
+					'<form>'+
 						'<div class="form-group">'+
-							'<label>Title</label>'+
+							'<label>Full Name</label>'+
 							'<input type="text" class="form-control">'+
 						'</div>'+
 						'<div class="form-group">'+
-							'<label>Description</label>'+
-							'<textarea class="form-control" rows="5" id="editor"></textarea>'+
+							'<label>Address</label>'+
+							'<textarea class="form-control" id="editor"></textarea>'+
 						'</div>'+
 						'<div class="form-group">'+
-							'<label>Date</label>'+
+							'<div class="col-md-8 syn-clear">'+
+								'<label>City</label>'+
+								'<input type="text" class="form-control">'+
+							'</div>'+
+							'<div class="col-md-4 syn-clear">'+
+								'<label>Zip Code</label>'+
+								'<input type="text" class="form-control">'+
+							'</div>'+
+							'<div class="clearfix"></div>'+
+						'</div>'+
+						'<div class="form-group">'+
+							'<label>Country</label>'+
+							'<select class="form-control">'+
+								countryListOption() +
+							'</select>'+
+						'</div>'+
+						'<div class="form-group">'+
+							'<label>Mobile Phone</label>'+
 							'<input type="text" class="form-control">'+
+						'</div>'+
+						'<div class="form-group">'+
+							'<label>Email</label>'+
+							'<input type="email" class="form-control">'+
 						'</div>'+
 						'<div class="clearfix"></div>'+
 						'<div class="btn-group">'+
 							'<button class="btn btn-warning" type="button">Create</button>'+
 							'<button class="btn btn-warning" type="button">Cancel</button>'+
 						'</div>'+
-					'</div>' +
-					'<div class="input-frame col-md-6">'+
-						'<div class="form-group">'+
-							'<label>Chatter Image</label>'+
-						'</div>'+
-						'<div class="form-group text-center">'+
-							'<img class="medium-image" src="../assets/default/chatter.gif">'+
-						'</div>'+
-						'<div class="form-group">'+
-							'<input id="input-id" type="file" class="file form-control" data-preview-file-type="text">'+
-						'</div>' +
-					'</div>' +
-				'</form>';
+					'</form>'+
+				'</div>';
 
 				// html = html + '</div>';
 				$('main.parent-admin .main-content').append(html);
 
 				// //textarea editor
-				new nicEditor({iconsPath : '../assets/PICS/nicEditorIcons.gif'}).panelInstance('editor');
+				// new nicEditor({maxHeight : 100, iconsPath : '../assets/PICS/nicEditorIcons.gif'}).panelInstance('editor');
 			}
 		</script>
 	</body>
