--- a/admin/formDepartment.html
+++ b/admin/formDepartment.html
@@ -28,7 +28,6 @@
 		<script type="text/javascript" src="../assets/js/jquery-ui-1.10.0.custom.min.js"></script>
 		<script type="text/javascript" src="../assets/js/bootstrap.min.js"></script>	
 		<script type="text/javascript" src="../assets/js/syncard.js"></script>	
-		<script type="text/javascript" src="../assets/js/nicEdit.js"></script>	
 
 		<!-- page script -->
 		<script type="text/javascript">
@@ -41,17 +40,9 @@
 				html = html +
 				'<form>'+
 					'<div class="input-frame col-md-6">'+
-						'<h3><b>Chatter</b></h3>'+
+						'<h3><b>Department</b></h3>'+
 						'<div class="form-group">'+
-							'<label>Title</label>'+
-							'<input type="text" class="form-control">'+
-						'</div>'+
-						'<div class="form-group">'+
-							'<label>Description</label>'+
-							'<textarea class="form-control" rows="5" id="editor"></textarea>'+
-						'</div>'+
-						'<div class="form-group">'+
-							'<label>Date</label>'+
+							'<label>Department Name</label>'+
 							'<input type="text" class="form-control">'+
 						'</div>'+
 						'<div class="clearfix"></div>'+
@@ -60,24 +51,9 @@
 							'<button class="btn btn-warning" type="button">Cancel</button>'+
 						'</div>'+
 					'</div>' +
-					'<div class="input-frame col-md-6">'+
-						'<div class="form-group">'+
-							'<label>Chatter Image</label>'+
-						'</div>'+
-						'<div class="form-group text-center">'+
-							'<img class="medium-image" src="../assets/default/chatter.gif">'+
-						'</div>'+
-						'<div class="form-group">'+
-							'<input id="input-id" type="file" class="file form-control" data-preview-file-type="text">'+
-						'</div>' +
-					'</div>' +
 				'</form>';
 
-				// html = html + '</div>';
 				$('main.parent-admin .main-content').append(html);
-
-				// //textarea editor
-				new nicEditor({iconsPath : '../assets/PICS/nicEditorIcons.gif'}).panelInstance('editor');
 			}
 		</script>
 	</body>
