--- a/admin/formUser.html
+++ b/admin/formUser.html
@@ -41,18 +41,28 @@
 				html = html +
 				'<form>'+
 					'<div class="input-frame col-md-6">'+
-						'<h3><b>Chatter</b></h3>'+
+						'<h3><b>User</b></h3>'+
 						'<div class="form-group">'+
-							'<label>Title</label>'+
+							'<label>Full Name</label>'+
 							'<input type="text" class="form-control">'+
 						'</div>'+
 						'<div class="form-group">'+
-							'<label>Description</label>'+
-							'<textarea class="form-control" rows="5" id="editor"></textarea>'+
+							'<label>Username (email)</label>'+
+							'<input type="email" class="form-control">'+
 						'</div>'+
 						'<div class="form-group">'+
-							'<label>Date</label>'+
-							'<input type="text" class="form-control">'+
+							'<label>Password</label>'+
+							'<input type="password" class="form-control">'+
+						'</div>'+
+						'<div class="form-group">'+
+							'<label>Re-type Password</label>'+
+							'<input type="password" class="form-control">'+
+						'</div>'+
+						'<div class="form-group">'+
+							'<label>Department</label>'+
+							'<select class="form-control">'+
+								'<option value="">Choose Department</option>'+
+							'</select>'+
 						'</div>'+
 						'<div class="clearfix"></div>'+
 						'<div class="btn-group">'+
@@ -62,10 +72,10 @@
 					'</div>' +
 					'<div class="input-frame col-md-6">'+
 						'<div class="form-group">'+
-							'<label>Chatter Image</label>'+
+							'<label>Avatar</label>'+
 						'</div>'+
 						'<div class="form-group text-center">'+
-							'<img class="medium-image" src="../assets/default/chatter.gif">'+
+							'<img class="medium-image" src="../assets/default/user.gif">'+
 						'</div>'+
 						'<div class="form-group">'+
 							'<input id="input-id" type="file" class="file form-control" data-preview-file-type="text">'+
