--- a/admin/product.html
+++ b/admin/product.html
@@ -28,6 +28,7 @@
 		<script type="text/javascript" src="../assets/js/jquery-ui-1.10.0.custom.min.js"></script>
 		<script type="text/javascript" src="../assets/js/bootstrap.min.js"></script>	
 		<script type="text/javascript" src="../assets/js/syncard.js"></script>	
+		<script type="text/javascript" src="../assets/js/public.js"></script>	
 
 		<!-- page script -->
 		<script type="text/javascript">
@@ -36,26 +37,15 @@
 			});
 			function loadData(){
 				var html = '';
-				var desc = "The little girl gave Pepe a big hug and said, \"I have been endlessly chasing the horizon, running away from monsters that keep haunting me \"";
-				desc = desc.substring(0, 100) + '...';
-
-				var data = [
-					{ picture: 'db_file_img_133_350x350', productId: 'ABSD', name: 'Atelier Box', description: desc, qty: '123', price: '770000'},
-					{ picture: 'db_file_img_539_350x350', productId: 'SSDA', name: 'Beach Box', description: desc, qty: '22', price: '8700000'},
-					{ picture: 'db_file_img_567_350x350', productId: 'VVXD', name: 'City Tote', description: desc, qty: '34', price: '87000'},
-					{ picture: 'db_file_img_785_350x350', productId: 'FFAD', name: 'Coterie Bag', description: desc, qty: '1', price: '1270000'},
-					{ picture: 'db_file_img_944_350x350', productId: 'WEAS', name: 'Cruise Bag', description: desc, qty: '2', price: '1370000'},
-					{ picture: 'db_file_img_995_350x350', productId: 'QWER', name: 'Gallery Tote', description: desc, qty: '6', price: '870000'},
-				]
 
 				html = html +
 				'<div class="operation-group">'+
 					'<form class="form-inline">' +
 						'<div class="input-group">' +
-							'<a href="newProduct.html"><i class="fa fa-plus-circle text-warning">&nbsp;</i> Add Product</a>'+
+							'<a href="formProduct.html"><i class="fa fa-plus-circle text-warning">&nbsp;</i> Add Product</a>'+
 						'</div>' +
 						'<div class="input-group">' +
-							'<a href="#"><i class="fa fa-minus-circle text-warning">&nbsp;</i> Delete Product</a>'+
+							'<a href="#" id="deleteButton"><i class="fa fa-minus-circle text-warning">&nbsp;</i> Delete Product</a>'+
 						'</div>' +
 						'<div class="input-group operation-button">' +
 							'<a href="#"><i class="fa fa-bars text-warning">&nbsp;</i> Manage Product</a>'+
@@ -66,7 +56,7 @@
 			        	'<div class="input-group pull-right">' +
 			        		'<input type="text" class="form-control" placeholder="Search">' +
 				        	'<span class="input-group-btn">' +
-				        		'<button type="submit" class="btn btn-default">SEARCH</button>' +
+				        		'<button type="submit" class="search btn btn-default">SEARCH</button>' +
 				        	'</span>' +
 			        	'</div>' +
 			   		'</form>' +
@@ -76,7 +66,7 @@
 					'<div class="summary-group">'+
 						'<div class="summary-text">'+
 							'<p>Total number of Products</p>'+
-							'<p class="number">' + data.length + '</p>'+
+							'<p class="number" id="totalRecord">0</p>'+
 						'</div>'+
 						'<div class="alpha">'+
 							'<ul>' +
@@ -114,7 +104,7 @@
 					'<table class="table table-striped table-responsive">'+
 					    '<thead>'+
 					    	'<tr>'+
-						    	'<th width="5%"><input type="checkbox" id="selectRecord" onclick="checkboxToggle(this, \'customerSelect\')" /><label for="selectRecord"></label></th>'+
+						    	'<th width="5%"><input type="checkbox" id="selectRecord" value="0" onclick="checkboxToggle(this, \'customerSelect\')" /><label for="selectRecord"></label></th>'+
 						    	'<th width="5%" class="text-center"><i class="fa fa-picture-o"></i></th>'+
 						        '<th width="10%" class="text-center">SKU</th>'+
 						        '<th>Product Name</th>'+
@@ -124,19 +114,6 @@
 					    	'</tr>'+
 					    '</thead>'+
 					    '<tbody>';
-
-		    	for(var loop =0; loop<data.length; loop++){
-		    		html = html +
-		    		'<tr>'+
-		    			'<td width="5%"><input type="checkbox" name="customerSelect" value="'+loop+'" id="selectRecord' + loop + '"><label for="selectRecord' + loop + '"></label></td>'+
-		    			'<td width="5%"><img class="img-product" src="../assets/PICS/'+ data[loop].picture +'.jpg"></td>'+
-		    			'<td class="text-center">'+ data[loop].productId +'</td>'+
-		    			'<td>'+ data[loop].name +'</td>'+
-		    			'<td>'+ data[loop].description +'</td>'+
-		    			'<td class="text-center">'+ data[loop].qty +'</td>'+
-		    			'<td class="text-right">'+ currencyFormat(data[loop].price) +'</td>'+
-		    		'</tr>';
-		    	}
 
 				html = html +
 					    '</tbody>'+
@@ -176,11 +153,102 @@
 					'</div>'+
 				'</div>';
 
-				// html = html + '</div>';
 				$('main.parent-admin .main-content').append(html);
+
+				r_setCookie('adminPageFilter', '1');
+				r_setCookie('adminAlphaFilter', '');
+				var page = (r_getCookie('adminPageFilter') != "" ? r_getCookie('adminPageFilter'): "1");
+				var data = p_getData('operation', 'product', page);
+					data = data.feedData;
+
+				dataGenerator(data);
+				
+				//filter
+				$('.alpha a').on("click", function(){
+					var page = (r_getCookie('adminPageFilter') != "" ? r_getCookie('adminPageFilter'): "1");
+					var data = p_getData('operation', 'product', page, '(name LIKE "' + $(this).html() + '%")');
+					data = data.feedData;
+					dataGenerator(data);
+
+					r_setCookie('adminPageFilter', page);
+					r_setCookie('adminAlphaFilter', $(this).html());
+				});
+
+				$('button.search').on("click", function(){
+					var keyword = $("[placeholder='Search']").val();
+					var data = p_getData('operation', 'product', '1', '(name LIKE "%' + keyword + '%" OR sku LIKE "%' + keyword + '%")');
+					data = data.feedData;
+					dataGenerator(data);
+				});
+
+				//filter end
+
+				//paging
+				$('.pagging-text .pagging-right').on("click", function(){
+					var page = (r_getCookie('adminPageFilter') != "" ? r_getCookie('adminPageFilter'): "1");
+					page = parseInt(page) + 1;
+
+					var keyword = $("[placeholder='Search']").val();
+					var alpha = (r_getCookie('adminAlphaFilter') != "" ? '(name LIKE "' + r_getCookie('adminAlphaFilter') + '%") AND ': "");
+
+					var data = p_getData('operation', 'product', page, alpha + '(name LIKE "%' + keyword + '%" OR sku LIKE "%' + keyword + '%")');
+					data = data.feedData;
+
+					if(data.length > 0){ dataGenerator(data); } else { page = parseInt(page) - 1; }
+
+					r_setCookie('adminPageFilter', page);
+				});
+
+				$('.pagging-text .pagging-left').on("click", function(){
+					var page = (r_getCookie('adminPageFilter') != "" ? r_getCookie('adminPageFilter'): "1");
+					if(page > 1){
+						page = parseInt(page) - 1;
+
+						var keyword = $("[placeholder='Search']").val();
+						var data = p_getData('operation', 'product', page, '(name LIKE "%' + keyword + '%" OR sku LIKE "%' + keyword + '%")');
+						data = data.feedData;
+						dataGenerator(data);
+
+						r_setCookie('adminPageFilter', page);
+					}
+				});
+				//paging end
+
+				
 			}
 			
-		
+			function dataGenerator(data){
+				var html = "";
+				for(var loop =0; loop<data.length; loop++){
+
+					data[loop].picture = (data[loop].picture != "") ? "../assets/products/" + data[loop].picture : "";
+		    		html = html +
+		    		'<tr>'+
+		    			'<td width="5%"><input type="checkbox" name="customerSelect" value="'+data[loop].idData+'" id="selectRecord' + loop + '"><label for="selectRecord' + loop + '"></label></td>'+
+		    			'<td width="5%"><img class="img-product" src="'+ data[loop].picture +'"></td>'+
+		    			'<td class="text-center">'+ data[loop].sku +'</td>'+
+		    			'<td>'+ data[loop].name +'</td>'+
+		    			'<td>'+ data[loop].description +'</td>'+
+		    			'<td class="text-center">'+ data[loop].qty +'</td>'+
+		    			'<td class="text-right">'+ currencyFormat(data[loop].price) +'</td>'+
+		    		'</tr>';
+		    	}
+
+				$('main.parent-admin table tbody').html('').append(html);
+				$('main.parent-admin #totalRecord').html(data.length);
+
+				//activator
+				checkboxActivator();
+				operationActivator();
+			}
+
+			function operationActivator(){
+				$('#deleteButton').unbind().on("click", function(){ 
+					if(checkedArray.length>0){
+						p_removeData('operation', 'product', checkedArray);
+					}
+				});
+			}
 		</script>
 	</body>
 </html>
